--- a/Consalting_Frontend/src/styles.css
+++ b/Consalting_Frontend/src/styles.css
@@ -8,7 +8,7 @@
     --header-color: #0d6efd;
 
     --card-bg: #4d4949;
-    --card-border-color: #5e2020;
+    --card-border-color: #0d6dfd6a;
     --card-text: #fff;
 
     --primary-btn-bg: var(--primary-color);
