--- a/Consalting_Frontend/src/pages/HomePage/HomePage.css
+++ b/Consalting_Frontend/src/pages/HomePage/HomePage.css
@@ -1,34 +1,41 @@
 .guest-page {
-    position: relative;
-    height: 1000px;
-    background-image: url('../public/5.png'); /* Путь к изображению фона */
-    background-size: cover;
-    background-position: center;
-    color: white;
-  }
-  
-  .background-overlay {
-    position: absolute;
-    top: 220;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Чёрная заливка с 50% прозрачности */
-  }
-  
-  h1 {
-    color: white;
-    margin-top: 50px;
-    padding: 0 160px;
-    font-size: 48px;
-    text-align: center;
-    font-family: 'Dela Gothic One', sans-serif;
-  }
-  
-  p {
-    color: white;
-    text-align: center;
-    font-size: 20px;
-    margin: 50px 300px;
-    font-family: Arial, sans-serif;
-  }
+  position: relative;
+  height: 1000px;
+  background-image: url("../public/5.png"); /* Путь к изображению фона */
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+.background-overlay {
+  position: absolute;
+  top: 220;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Чёрная заливка с 50% прозрачности */
+}
+.react-tel-input .flag-dropdown {
+  margin: 0 !important; /* Убирает отрицательный отступ */
+  position: relative !important; /* Исправляет позиционирование */
+}
+.react-tel-input .flag {
+  display: none !important; /* Убирает иконку флага */
+}
+
+h1 {
+  color: white;
+  margin-top: 50px;
+  padding: 0 160px;
+  font-size: 48px;
+  text-align: center;
+  font-family: "Dela Gothic One", sans-serif;
+}
+
+p {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  margin: 50px 300px;
+  font-family: Arial, sans-serif;
+}
